--- a/styles.css
+++ b/styles.css
@@ -689,7 +689,40 @@ body.outlook p {
 
 /* CUSTOMIZED */
 
-.header {
-  background: url('images/header-bg.gif');
-  background-color: #333;
+body, .body {
+  background: #ebe9e6;
 }
+
+table.container {
+  background: #FFF;
+  border: 15px solid #FFF;
+}
+
+a {
+  color: #27B99A;
+}
+
+.header {
+  background-color: #333;
+  background: url('images/header-bg.gif');
+  background-repeat: repeat-x;
+}
+
+.panel {
+  background: #242424;
+  border: 1px solid #d9d9d9;
+  padding: 10px !important;
+
+}
+
+.panel p {
+  color: #fff;
+}
+
+.row.footer {
+  background-color: #fff;
+}
+
+
+
+
