--- a/ink.css
+++ b/ink.css
@@ -2,7 +2,7 @@
 * Ink v1.0.5 - Copyright 2013 ZURB Inc        *
 **********************************************/
 
-/* Client-specific Styles & Reset */
+/* INK DEFAULT STYLES*/
 
 #outlook a {
   padding:0;
@@ -111,7 +111,7 @@ table.container table.row {
 }
 
 td.wrapper {
-  padding: 0px 20px 0px 0px;
+  padding: 10px 20px 0px 0px;
   position: relative;
 }
 
@@ -129,11 +129,15 @@ table.columns td.sub-columns,
 table.column td.sub-columns,
 table.columns td.sub-column,
 table.column td.sub-column {
-  padding-right: 0px;
+  padding: 0 5px;
 }
 
 td.sub-column, td.sub-columns {
   min-width: 0px;
+}
+
+table.columns td.sub-columns.last {
+  padding-right: 5px;
 }
 
 table.row td.last,
@@ -294,8 +298,7 @@ h2.center,
 h3.center,
 h4.center,
 h5.center,
-h6.center,
-p.center {
+h6.center {
   text-align: center;
 }
 
@@ -319,10 +322,11 @@ img.center {
 
 body, table.body, h1, h2, h3, h4, h5, h6, p, td {
   color: #222222;
-  font-family: "Helvetica", "Arial", sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   padding:0;
   margin: 0;
+  font-weight: 200;
   text-align: left;
   line-height: 1.3;
 }
@@ -353,20 +357,20 @@ small {
 }
 
 a {
-  color: #2ba6cb;
+  color: #09AE8B;
   text-decoration: none;
 }
 
 a:hover {
-  color: #2795b6 !important;
+  color: #0bd3a9 !important;
 }
 
 a:active {
-  color: #2795b6 !important;
+  color: #09AE8B !important;
 }
 
 a:visited {
-  color: #2ba6cb !important;
+  color: #045141 !important;
 }
 
 h1 a,
@@ -375,7 +379,7 @@ h3 a,
 h4 a,
 h5 a,
 h6 a {
-  color: #2ba6cb;
+  color: #09AE8B;
 }
 
 h1 a:active,
@@ -384,7 +388,7 @@ h3 a:active,
 h4 a:active,
 h5 a:active,
 h6 a:active {
-  color: #2ba6cb !important;
+  color: #09AE8B !important;
 }
 
 h1 a:visited,
@@ -393,7 +397,7 @@ h3 a:visited,
 h4 a:visited,
 h5 a:visited,
 h6 a:visited {
-  color: #2ba6cb !important;
+  color: #09AE8B !important;
 }
 
 /* Panels */
@@ -431,10 +435,13 @@ table.large-button td {
   display: block;
   width: auto !important;
   text-align: center;
-  background: #2ba6cb;
-  border: 1px solid #2284a1;
+  background: #09AE8B;
+  -webkit-box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.75);
+  -moz-box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.75);
+  box-shadow: inset 0px 0px 1px 0px rgba(0,0,0,0.75);
   color: #ffffff;
   padding: 8px 0;
+  margin-top: 2px;
 }
 
 table.tiny-button td {
@@ -458,9 +465,9 @@ table.tiny-button td a,
 table.small-button td a,
 table.medium-button td a,
 table.large-button td a {
-/*  font-weight: bold;*/
+  font-weight: 200;
   text-decoration: none;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #ffffff;
   font-size: 16px;
 }
@@ -485,7 +492,7 @@ table.large-button td a {
 table.button:hover td,
 table.button:visited td,
 table.button:active td {
-  background: #2795b6 !important;
+
 }
 
 table.button:hover td a,
@@ -499,7 +506,7 @@ table.tiny-button:hover td,
 table.small-button:hover td,
 table.medium-button:hover td,
 table.large-button:hover td {
-  background: #2795b6 !important;
+
 }
 
 table.button:hover td a,
@@ -518,6 +525,45 @@ table.large-button:hover td a,
 table.large-button:active td a,
 table.large-button td a:visited {
   color: #ffffff !important;
+}
+
+table.secondary td {
+  background: #e9e9e9;
+  border-color: #d0d0d0;
+  color: #555;
+}
+
+table.secondary td a {
+  color: #555;
+}
+
+table.secondary:hover td {
+  background: #d0d0d0 !important;
+  color: #555;
+}
+
+table.secondary:hover td a,
+table.secondary td a:visited,
+table.secondary:active td a {
+  color: #555 !important;
+}
+
+table.success td {
+  background: #5da423;
+  border-color: #457a1a;
+}
+
+table.success:hover td {
+  background: #457a1a !important;
+}
+
+table.alert td {
+  background: #c60f13;
+  border-color: #970b0e;
+}
+
+table.alert:hover td {
+  background: #970b0e !important;
 }
 
 table.radius td {
@@ -649,50 +695,54 @@ body.outlook p {
   }
 }
 
-/* CUSTOMIZED */
+
+
+/* WANNA WATCH MODICIFATIONS & CUSTOM STYLES */
 
 body, .body {
-  background: #ebe9e6;
+  background: #EAE9E5;
 }
 
 table.container {
-  background: #FFF;
-  border-radius: 3px 3px 0 0;
+  background: #fff;
 }
 
-a {
-  color: #27B99A;
-}
-
-a:hover, a:visited {
-  color: #1e8f77 !important;
+p:last-child {
+  margin-bottom: 0px;
 }
 
 .header {
-  background-color: #333;
   background: url('images/header-bg.gif');
   background-repeat: repeat-x;
-  background-size: 5px 40px;
+  background-size: 5px 50px;
+  margin-bottom: 5px;
+}
+
+.header td.wrapper {
+  padding: 0;
 }
 
 .panel {
-  background: #242424;
-  border: 1px solid #d9d9d9;
-  padding: 10px !important;
-
+  background: #333;
 }
 
-.panel p {
+.panel p, .panel h6 {
   color: #fff;
 }
+
+.panel a,  {
+  color: #09AE8B !important;
+  text-decoration: underline;
+}
+
 
 .row.footer {
   background-color: #D5D5D5;
 }
 
-
-.footer p {
+.row.footer p {
   font-size: 12px;
+  margin-bottom: 0;
 }
 
 img.user-icon {
@@ -706,43 +756,29 @@ img.user-icon {
   margin-top: 10px;
 }
 
-
-table.button.wanna td {
-  background: #27b99a;
-  border-color: #166857;
-  width: calc(100% - 12px) !important;
-  margin: 5px;
+.user-center {
+  background: url('images/header-bg.gif');
+  background-repeat: repeat-x;
+  background-size: 5px 50px;
+  background-position: center;
 }
 
-table.button.wanna:hover td {
-  background: #2ac9a7 !important;
-  cursor: pointer;
+.user-center img {
+  margin: 0 auto !important;
+  float: none;
 }
 
-table.button.wanna td a {
-  color: #fff;
+.wanna {
+  color: #09AE8B !important;
+  background: #09AE8B !important;
 }
 
-table.button.seen td {
-  background: #3cace6;
-  border-color: #146b99;
-  margin: 5px;
+.seen {
+  color: #3CACE6 !important;
+  background: #3CACE6 !important;
 }
 
-table.button.seen:hover td {
-  background: #2bb1f7 !important;
-  cursor: pointer;
+.dont {
+  color: #E64C3C !important;
+  background: #E64C3C !important;
 }
-
-table.button.dont td {
-  background: #E64C3C;
-  border-color: #992014;
-  margin: 5px;
-}
-
-table.button.dont:hover td {
-  background: #f73e2b !important;
-  cursor: pointer;
-}
-
-
